--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -187,10 +187,10 @@
 "~^/About\:Gwern.net.*$" "/design";
 "~^/[Dd]esign-G.*$" "/design-graveyard";
 "~^/Design.oage$" "/design.page";
-"~^/doc/genetics/selection/www.mountimprobable.com/fiction/Dinosaur-Comics$" "/dinosaur-Comics";
-"~^/doc/genetics/selection/www.mountimprobable.com/tags/DNB$" "/dNB";
-"~^/%20dual%20n-back$" "/dNB-FAQ";
-"~^/DNB-FAQ.pagre.*$" "/dNB-FAQ>page";
+"~^/doc/genetics/.*/Dinosaur-Comics$" "/fiction/dinosaur-comics";
+"~^/doc/genetics/selection/www.mountimprobable.com/tags/DNB$" "/dnb";
+"~^/%20dual%20n-back$" "/dnb-faq";
+"~^/DNB-FAQ.pagre.*$" "/dnb-faq.page";
 "~^/DNB%20FAQ%20/l%20should-i-do-multiple-daily-sessions-or-just-one$" "/dNB-FAQ#should-i-do-multiple-daily-sessions-or-just-one";
 "~^/DNB-FAQsleep.*$" "/dNB-FAQ#sleep";
 "~^/dnb-faq@support.*$" "/dNB-FAQ#support";
@@ -8710,40 +8710,40 @@
 # "~^/l-theanine$" "/nootropics#theanine";
 # "~^/tianeptine$" "/nootropics#tianeptine";
 "~^/%C3%A2%E2%82%AC%C5%93Got-some.-Cicadas-are-crunchy.*$" "/notes";
-"~^/Abandoned.*$" "/notes/Abandoned-Footnotes";
-"~^/doc/iq/roe/index\.html$" "/notes/Anne-Roe";
-"~^/attention$" "/notes/Attention";
-"~^/notes/automate$" "/notes/Automation";
-"~^/bjorksten$" "/notes/Bjorksten";
+"~^/Abandoned.*$" "/note/Abandoned-Footnotes";
+"~^/doc/iq/roe/index\.html$" "/note/Anne-Roe";
+"~^/attention$" "/note/Attention";
+"~^/notes/automate$" "/note/Automation";
+"~^/bjorksten$" "/note/Bjorksten";
 "~^/Cicadas.*$" "/notes#cicadas";
-"~^/[Cc]ompet.*$" "/notes/Competence";
-"~^/notes/copyright-deadweight.*$" "/notes/Copyright-deadweight";
-"~^/\?Daicon-videos$" "/notes/Daicon-videos";
-"~^/emergenesis.*$" "/notes/Emergenesis";
-"~^/end$" "/notes/End-to-end";
-"~^/ethicist.*$" "/notes/Ethicists";
-"~^/Fashion.*$" "/notes/Fashion";
-"~^/faster$" "/notes/Faster";
-"~^/fc$" "/notes/FC";
-"~^/fermi.*$" "/notes/Fermi";
+"~^/[Cc]ompet.*$" "/note/Competence";
+"~^/notes/copyright-deadweight.*$" "/note/Copyright-deadweight";
+"~^/\?Daicon-videos$" "/note/Daicon-videos";
+"~^/emergenesis.*$" "/note/Emergenesis";
+"~^/end$" "/note/End-to-end";
+"~^/ethicist.*$" "/note/Ethicists";
+"~^/Fashion.*$" "/note/Fashion";
+"~^/faster$" "/note/Faster";
+"~^/fc$" "/note/FC";
+"~^/fermi.*$" "/note/Fermi";
 "~^/highly-potent-drugs-as-psychological-warfare-weapons$" "/notes#highly-potent-drugs-as-psychological-warfare-weapons";
-"~^/no$" "/notes/index";
-"~^/income$" "/notes/IQ-Income";
-"~^/\?Killing-Rabbits$" "/notes/Killing-Rabbits";
-"~^/[Ll]ion.*$" "/notes/Lions";
-"~^/-lizardman$" "/notes/Lizardman-constant";
-"~^/[Ll]ocal.*$" "/notes/Local-optima";
+"~^/no$" "/note/index";
+"~^/income$" "/note/IQ-Income";
+"~^/\?Killing-Rabbits$" "/note/Killing-Rabbits";
+"~^/[Ll]ion.*$" "/note/Lions";
+"~^/-lizardman$" "/note/Lizardman-constant";
+"~^/[Ll]ocal.*$" "/note/Local-optima";
 "~^/[Nn]ash[xX].*" "/notes/Nash";
 "~^/northpaw/.*$" "/notes#north-paw";
 "~^/Notes.page/index.html.*$" "/note/note.page";
-"~^/notes/Piepline.*$" "/notes/Pipeline";
-"~^/notes/portia.*$" "/notes/Portia";
-"~^/Frank-Ramsey$" "/notes/Ramsey";
-"~^/notes/Regressio$" "/notes/Regression";
-"~^/notes/Scale$" "/notes/Scaling";
-"~^/[Gg]roups.*$" "/notes/Small-groups";
-"~^/notes/Distillation.*$" "/notes/Sparsity";
-"~^/Morphometricity.*$" "/notes/Variance-components";
+"~^/notes/Piepline.*$" "/note/Pipeline";
+"~^/notes/portia.*$" "/note/Portia";
+"~^/Frank-Ramsey$" "/note/Ramsey";
+"~^/notes/Regressio$" "/note/Regression";
+"~^/notes/Scale$" "/note/Scaling";
+"~^/[Gg]roups.*$" "/note/Small-groups";
+"~^/notes/Distillation.*$" "/note/Sparsity";
+"~^/Morphometricity.*$" "/note/Variance-components";
 "~^/Notes%23worldbuilding-the-lights-in-the-sky-are-sacs$" "/notes#worldbuilding-the-lights-in-the-sky-are-sacs";
 "~^/nootropics/null$" "/null";
 "~^/doc/genetics/selection/www.mountimprobable.com/On-Disrespect$" "/on-Disrespect";
@@ -10603,15 +10603,15 @@
 "~^/nootropics-survey$" "/nootropic/nootropics";
 "~^/nootropic/tags/experiments$" "/doc/nootropic/quantified-self/index";
 "~^/note/end$" "/note/end-to-end";
-"~^/note/Fermi$" "/notes/fermi";
-"~^/note/Lion$" "/notes/lions";
-"~^/note/Liza$" "/notes/lions";
-"~^/note/Ramsey$" "/notes/ramsey";
+"~^/note/Fermi$" "/note/fermi";
+"~^/note/Lion$" "/note/lions";
+"~^/note/Liza$" "/note/lions";
+"~^/note/Ramsey$" "/note/ramsey";
 "~^/notes$" "/note/note";
 "~^/note/Scaling-laws$" "/note/scaling";
 "~^/Notes.html$" "/face";
 "~^/Noteslittlewoods-law-and-the-global-media$" "/littlewood";
-"~^/Notes/Notes$" "/notes/note";
+"~^/Notes/Notes$" "/note/note";
 "~^/.../okcupid/yourlooksandyourinbox.html$" "/doc/psychology/okcupid/yourlooksandyourinbox.html";
 "~^/otaku.html$" "/otaku";
 "~^/pmc$" "https://en.wikipedia.org/wiki/PubMed_Central";
@@ -10643,7 +10643,7 @@
 "~^/static/js/extracts.js.html.html$" "/static/js/extracts.js.html";
 "~^/static/js/image-focus.js.html.html$" "/static/js/image-focus.js.html";
 "~^/static/plugins/Interwiki.hs$" "/static/build/Interwiki.hs";
-"~^/Statistical-notes\?ref=labnotes.org$" "/notes/statistics";
+"~^/Statistical-notes\?ref=labnotes.org$" "/note/statistics";
 "~^/sunk$" "/sunk-costs";
 "~^/Tanks\?ref=cold-takes$" "/tank";
 "~^/Tanks\?ref=cold-takes.com$" "/tank";
@@ -11167,8 +11167,8 @@
 "~^/gpt-3-zh$" "/gpt-3";
 "~^/gpt-3.5$" "/gpt-3";
 "~^/holy-wars\?source=techstories.org$" "/holy-wars";
-"~^/Nootropics/Nootropics$" "/nootropic/nootropics";
-"~^/note/statistics$" "/order-statistics";
+"~^/.*/Nootropics$" "/nootropic/nootropics";
+"~^/note/statistics.*$" "/note/statistic";
 "~^/Genshiken$" "/question";
 "~^/Scalinghypothesis$" "/scaling-hypothesis";
 "~^/doc/Self-decrypting-files$" "/self-decrypting-file";
@@ -11329,7 +11329,7 @@
 "~^/melatoninDudu$" "/melatonin";
 "~^/Silk$" "/silk-road";
 "~^/note/Scale-laws$" "/note/scaling";
-"~^/note/Small-group$" "/notes/small-groups";
+"~^/note/Small-group$" "/note/small-groups";
 "~^/Reproducibility-Crisis$" "/replication";
 "~^/Slowing\+Moore$" "/slowing-moores-law";
 "~^/doc/favicon.ico$" "/static/img/favicon.png";
@@ -11635,7 +11635,7 @@
 "~^/que$" "/question";
 "~^/ques$" "/question";
 "~^/LSD-microdosingJoku$" "/lsd-microdosing";
-"~^/note/Lizardman-constantOne$" "/notes/lizardman-constant";
+"~^/note/Lizardman-constantOne$" "/note/lizardman-constant";
 "~^/question/$" "/question";
 "~^/questio$" "/question";
 "~^/queestion$" "/question";
@@ -12311,7 +12311,7 @@
 "~^/media-lab$" "/timing";
 "~^/./Morning-writing$" "/morning-writing";
 "~^/Nicotine[Ff]o.*$" "/nicotine";
-"~^/note/Lizardman-constant/$" "/notes/lizardman-constant";
+"~^/note/Lizardman-constant/$" "/note/lizardman-constant";
 "~^/prediction-marketsto$" "/prediction-market";
 "~^/Resorter/$" "/resorter";
 "~^/review/Bo$" "/review/book";
@@ -12343,7 +12343,7 @@
 "~^/doc/statistics/bayes/1950-good-probabilityandtheweighingof$" "/doc/statistics/bayes/1950-good-probabilityandtheweighingofevidence.pdf";
 "~^/doc/ai/scaling/1987-sejnowski$" "/doc/ai/scaling/1987-sejnowski.pdf";
 "~^/Unseeing\?ref.*$" "/unseeing";
-"~^/Statistical-notes\?utm.*$" "/notes/statistics";
+"~^/Statistical-notes\?utm.*$" "/note/statistics";
 "~^/static/metadata/preview.hs$" "https://github.com/gwern/gwern.net/";
 "~^/Scanners\?utm_source=RSS&utm_medium=feed&utm_campaign=1$" "";
 "~^/doc/technology/2005-shirky-agroupisitsownworstenemy$" "/doc/technology/2005-shirky-agroupisitsownworstenemy.html";
@@ -12371,10 +12371,10 @@
 "~^/LSD-microdosingTh.*$" "/lsd-microdosing";
 "~^/miletia$" "/miletians";
 "~^/newto$" "/newton";
-"~^/note/regressio$" "/notes/regression";
-"~^/note/attentio$" "/notes/attention";
-"~^/note/fashio$" "/notes/fashion";
-"~^/note/lio$" "/notes/lions";
+"~^/note/regressio$" "/note/regression";
+"~^/note/attentio$" "/note/attention";
+"~^/note/fashio$" "/note/fashion";
+"~^/note/lio$" "/note/lions";
 "~^/review/cultural-revolutio$" "/reviews/cultural-revolution";
 "~^/selectio$" "/selection";
 "~^/spaced-repetitio$" "/spaced-repetition";
@@ -12404,8 +12404,102 @@
 "~^/doc/economics/2013-heald.pdf.*$" "/doc/economics/copyright/2014-heald.pdf";
 "~^/note/Local-optima.*$" "/note/local-optima";
 "~^/doc/ai/poetry/favicon.ico.*$" "/static/img/favicon.ico";
-"~^/b[Ii][Gg][Gg][Aa][Nn].*$" "/biggan";
+"~^/B[Ii][Gg][Gg][Aa][Nn].*$" "/biggan";
 "~^/doc/rotten.com/library/bio/crime/mafia/Joe_Adonis/index.html.*$" "/doc/rotten.com/library/bio/crime/mafia/joe-adonis/index.html";
+"~^/rnn-metadata--finetuning-the-gpt-2-small-transformer-for-english-poetry-generation.*$" "/rnn-metadata#finetuning-the-gpt-2-small-transformer-for-english-poetry-generation";
+"~^/doc/psychology/2008-dweck-mindset-ch5.pdf.*$" "/static/404";
+"~^/doc/fiction/science-fiction/1986-moore-watchmen-chapter5.*$" "/static/404";
+"~^/doc/psychiatry/1972-rutter-maternaldeprivationreasgoosessed.pdf.*$" "/doc/psychiatry/1972-rutter-maternaldeprivationreassessed.pdf";
+"~^/doc/201$" "/doc/index";
+"~^/doc/sr/=3D.*$" "/doc/darknet-market/silk-road/1/index";
+"~^/doc/ChangeLog.txt$" "/changelog";
+"~^/static/js/footnotes.js$" "http://ignorethecode.net/blog/2010/04/20/footnotes/";
+"~^/.*/AB-testing$" "/ab-testing";
+"~^/Life-contractW.*$" "/life-contract";
+"~^/doc/statistics/dec...994-benter\.pdf.*$" "/doc/statistics/decision/1994-benter.pdf";
+"~^/doc/misc/2018-ngai\.pdf.*$" "/static/404";
+"~^/doc/ai/nn/transformer/gpt/dall-e/index/doc$" "/doc/ai/nn/transformer/gpt/dall-e/index";
+"~^/dleweb.ru.*" "/static/404";
+"~^/complexity-vs-ai\?source.*$" "/complexity-vs-ai";
+"~^/\[tT\]he-Scaling.*hypothesis$" "/scaling-hypothesis";
+"~^/Suzanne-Delage.html$" "/suzanne-delage";
+"~^/performance-rnn$" "https://arxiv.org/abs/1808.03715#google";
+"~^/.*/Colder-Wars$" "/colder-war";
+"~^/MLP\?utm.*$" "/review/mlp";
+"~^/Media-RL\?.*$" "/media-rl";
+"~^/GPT-3-04.*$" "/gpt-3";
+"~^/doc/wikipedia/toc-filenewbie-survival-by-semester-rows.png$" "https://en.wikipedia.org/wiki/File:Newbie_survival.by_semester.rows.png";
+"~^/doc/unsworth2005\.pdf.*$" "/doc/dual-n-back/2005-unsworth.pdf";
+"~^/doc/statistics/lw-anchoring-comment.png$" "/doc/statistics/gwern-lw-anchoring-comment.png";
+"~^/doc/rotten.com/.*1997-animeland-may-hideakianno-interview-english$" "/docs/eva/1997-animeland-may-hideakianno-interview-english";
+"~^/doc/psychology/okcupid/weexperimentonhumanbeing$" "/doc/psychology/okcupid/weexperimentonhumanbeings.html";
+"~^/doc/psychology/JCD63_07.*$" "/static/404";
+"~^/doc/psychology/3019-lim\.pdf.*$" "/doc/psychology/2019-lim.pdf";
+"~^/doc/psychiatry/lithium/2014-mauer$" "/doc/psychiatry/lithium/2014-mauer.pdf";
+"~^/doc/personal/gjp_ind_diff.php\$" "";
+"~^/doc/personal/23andme.*$" "/static/404";
+"~^/doc/iq/high/smpy/1983-benbow\.pdf.*$" "/doc/iq/high/smpy/1983-benbow-academicprecocity.pdf";
+"~^/doc/anime/eva/2011-houseReal.*$" "/doc/anime/eva/2011-house";
+"~^/doc/anime/eva/1996-newtype-anno-interviewgainax$" "/doc/anime/eva/1996-newtype-anno-interview";
+"~^/doc/ai/poetry/2019-03-06-gpt2-poetry-1000samples$" "/doc/ai/poetry/2019-03-06-gpt2-poetry-1000samples.txt";
+"~^/doc/ai/nn/gan/biggan/2018-12-24-bigganpytorch-animefaces-1006320.jpg$" "/doc/ai/nn/gan/biggan/2018-12-24-gwern-bigganpytorch-animefaces-1006320.jpg";
+"~^/doc/ai/nn/gan/2020-06-11-danbooru2019-palms-upscaledrealhandsamples.jpg$" "/doc/ai/nn/gan/2020-06-11-gwern-danbooru2019-palms-upscaledrealhandsamples.jpg";
+"~^/doc/ai/nn/gan/2020-05-30-danbooru2019-figures-randomsamples-40.jpg$" "/doc/ai/nn/gan/2020-05-30-gwern-danbooru2019-figures-randomsamples-40.jpg";
+"~^/doc/ai/aria-president-kyubey.jpg$" "/doc/ai/gwern-aria-president-kyubey.jpg";
+"~^/Culture-is-not-about-esthetics.html$" "/culture-is-not-about-esthetics";
+"~^/complexity-vs-ai\?utm.*$" "/complexity-vs-ai";
+"~^/Book-reading-list.html$" "/review/book";
+"~^/AB-testing\?utm_source=.*$" "/ab-testing";
+"~^/AB-tests$" "/ab-testing";
+"~^/Changelog/$" "/changelog";
+"~^/Collector$" "/collecting";
+"~^/DNB-FAQHere$" "/dnb-faq";
+"~^/DNM-arrests/$" "/dnm-arrests";
+"~^/DNM+arrest$" "/dnm-arrests";
+"~^/doc/statistics/2001-breiman\.pdf.*$" "/doc/ai/2001-breiman.pdf";
+"~^/gpt/inner-monologue/index$" "/doc/ai/gpt/inner-monologue/index";
+"~^/twdme$" "/twdne";
+"~^/doc/co2/2015-s\.pdf.*$" "/doc/co2/2015-stafford.pdf";
+"~^/doc/darknet-market/2011-07-1$" "/doc/darknet-market/2011-07-11-hedgedescrow.mht";
+"~^/doc/doc/lewis-meditation/index$" "/doc/doc/lewis-meditation/index";
+"~^/doc/genetics/2017-midic\.pdf.*$" "/doc/genetics/editing/2017-midic.pdf";
+"~^/doc/genetics/2008-halder\.pdf.*$" "/doc/genetics/heritable/2008-halder.pdf";
+"~^/doc/genetics/2017-yang\.pdf.*$" "/doc/genetics/heritable/2017-yang.pdf";
+"~^/doc/genetics/2008-scotet\.pdf.*$" "/doc/genetics/selection/2008-scotet.pdf";
+"~^/doc/1993-vernon-biologicalapproachestudyhumanintelligence\.pdf.*$" "/doc/iq/1993-vernon-biologicalapproachestudyhumanintelligence.pdf";
+"~^/doc/iq/roe/index$" "/doc/iq/roe/index";
+"~^/doc/longetivity/2019-decabo\.pdf.*$" "/doc/longevity/2019-decabo.pdf";
+"~^/doc/lw-survey/$" "/doc/lwsurvey/index";
+"~^/doc-melatonin/2014-boergers\.pdf.*$" "/doc/melatonin/2014-boergers.pdf";
+"~^/2docs/dnb/1978-zimmer\.pdf.*$" "/doc/music/music-distraction/1978-zimmer.pdf";
+"~^/doc/2012-newhouse\.pdf.*$" "/doc/nicotine/2012-newhouse.pdf";
+"~^/doc/1987-curio\.pdf.*$" "/doc/psychology/cognitive-bias/sunk-cost/1987-curio.pdf";
+"~^/doc/2012-cannon\.pdf.*$" "/doc/psychology/nature/2012-cannon.pdf";
+"~^/doc/1995-lipton\.pdf.*$" "/doc/sociology/1995-lipton.pdf";
+"~^/doc/statistics/1987-fraker\.pdf.*$" "/doc/statistics/causality/1987-fraker.pdf";
+"~^/doc/statistics/1988-colditz\.pdf.*$" "/doc/statistics/causality/1988-colditz.pdf";
+"~^/doc/meta-analysis/1987-pocock\.pdf.*$" "/doc/statistics/meta-analysis/1987-pocock.pdf";
+"~^/Haskell$" "/haskell/index";
+"~^/popin.html$" "/static/js/popups.js";
+"~^/index\[.*$" "/index";
+"~^/static/metadata/.*/metadata/auto.yaml$" "/metadata/auto.yaml";
+"~^/[Mm]agnesium$" "/nootropics/Magnesium";
+"~^/note/Attention$" "/note/attention";
+"~^/resilient-Haskell-Software$" "/resilient-haskell-software";
+"~^/film-reviews$" "/review/movie";
+"~^/Movies$" "/review/movies";
+"~^/Solk-Road$" "/silk-road";
+"~^/doc/reinforcement-learning/model-free/favicon.ico$" "/static/img/favicon.ico";
+"~^/doc/psychedelic/favicon.ico$" "/static/img/favicon.ico";
+"~^/story-Of-Your-Life$" "/story-of-your-life";
+"~^/Tool+AI$" "/tool-ai";
+"~^/popular$" "/index#popular";
+"~^/res$" "/resorter";
+"~^/GPT-31$" "/gpt-3";
+"~/[Bb]igg$" "/biggan";
+"~/[Bb]igga$" "/biggan";
+"~^/doc/statistics/bias/1992-miller-reresearchfraudbehavioralmedicalsciences.pdf.*$" "/doc/statistics/bias/1992-miller-researchfraudbehavioralmedicalsciences.pdf";
+"~^/doc/lesswrong-survey/%C3%82.*$" "/doc/lesswrong-survey/index";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.*/\.git/.*$" "/static/404";
@@ -17917,9 +18011,9 @@
 "~^/altenabet.*$" "/static/404";
 "~^/aiden8i18agl1.*$" "/static/404";
 "~^/sinaweibo.*$" "/static/404";
-"~^/[a-z0-9]]+\.ru/.*$" "/static/404";
-"~^/[a-z0-9]]+\.in/.*$" "/static/404";
-"~^/[a-z0-9]]+\.com/.*$" "/static/404";
+"~^/[a-z0-9]+\.ru/.*$" "/static/404";
+"~^/[a-z0-9]+\.in/.*$" "/static/404";
+"~^/[a-z0-9]+\.com/.*$" "/static/404";
 "~^/.*/redirect.php$" "/static/404";
 "~^/.*/bitrix/.*$" "/static/404";
 "~^/balloonse.*$" "/static/404";
@@ -17940,6 +18034,8 @@
 "~^/fcpera.com.*$" "/static/404";
 "~^/.*bonusnewmember.*$" "/static/404";
 "~^/semspb.tmweb.*$" "/static/404";
+"~^/[Mm]oneypedia.dk.*$" "/static/404";
+"~^/issuu.com.*$" "/static/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
