--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -9382,3 +9382,27 @@ default "";
 "~^/doc/psychology/1938-barker.pdf.*$" "/doc/psychology/personality/1938-barker.pdf";
 "~^/doc/psychiatry/1938-rosenzweig.pdf.*$" "/doc/psychiatry/1938-rosenzweig-2.pdf";
 "~^/doc/psychology/animal/1911-bogardus.pdf.*$" "/doc/psychology/animal/maze/1911-bogardus.pdf";
+"~^/doc/design/2023-04-01-gwernnet-desktop-partialpopups-withmetadatafooter.png.*$" "/doc/design/2023-04-01-gwern-gwernnet-desktop-partialpopups-withmetadatafooter.png";
+"~^/doc/design/2023-04-01-gwernnet-mobile-partialpopups-withmetadatafooter.png.*$" "/doc/design/2023-04-01-gwern-gwernnet-mobile-partialpopups-withmetadatafooter.png";
+"~^/doc/design/2023-04-02-gwernnet-backlinks-backlinksinsection-gpt3roleplayingfootnoteexample.png.*$" "/doc/design/2023-04-02-gwern-gwernnet-backlinks-backlinksinsection-gpt3roleplayingfootnoteexample.png";
+"~^/doc/design/2023-04-02-gwernnet-backlinks-backlinksinsection-ideatimeghostsectionexample.png.*$" "/doc/design/2023-04-02-gwern-gwernnet-backlinks-backlinksinsection-ideatimeghostsectionexample.png";
+"~^/doc/traffic/2010-gwernnet-nfsncosts.maff.*$" "/doc/traffic/2010-gwern-gwernnet-nfsncosts.maff";
+"~^/doc/traffic/2011-gwernnet-nfsncosts.maff.*$" "/doc/traffic/2011-gwern-gwernnet-nfsncosts.maff";
+"~^/doc/traffic/2012-gwernnet-nfsncosts.maff.*$" "/doc/traffic/2012-gwern-gwernnet-nfsncosts.maff";
+"~^/doc/traffic/2013-gwernnet-anonymousfeedback.csv.*$" "/doc/traffic/2013-gwern-gwernnet-anonymousfeedback.csv";
+"~^/doc/traffic/2021-01-24-wwwgwernnet-outboundlinks-20210112-20210124.csv.*$" "/doc/traffic/2021-01-24-gwern-googlewebmaster-wwwgwernnet-outboundlinks-20210112-20210124.csv";
+"~^/doc/traffic/2022-04-21-gwernnet-disqus-comments-analytics-april2021april2022.csv.*$" "/doc/traffic/2022-04-21-gwern-disqus-gwernnet-comments-analytics-april2021april2022.csv";
+"~^/doc/traffic/2022-04-21-gwernnet-disqus-commentsexport.tar.xz.*$" "/doc/traffic/2022-04-21-gwern-disqus-gwernnet-commentsexport.tar.xz";
+"~^/doc/darknet-market/silk-road/1/2013-06-07-premiumdutch-profile.htm.*$" "/doc/darknet-market/silk-road/1/2013-06-07-premiumdutch-profile.html";
+"~^/doc/darknet-market/silk-road/1/btcking-profile-1.htm.*$" "/doc/darknet-market/silk-road/1/btcking-profile-1.html";
+"~^/doc/darknet-market/silk-road/1/btcking-profile-2.htm.*$" "/doc/darknet-market/silk-road/1/btcking-profile-2.html";
+"~^/doc/darknet-market/silk-road/1/caligirl-profile.htm.*$" "/doc/darknet-market/silk-road/1/caligirl-profile.html";
+"~^/doc/darknet-market/silk-road/1/hammertime-profile.htm.*$" "/doc/darknet-market/silk-road/1/hammertime-profile.html";
+"~^/doc/biology/2000-iapac-norvir/tolerability/dejar_alc.htm.*$" "/doc/biology/2000-iapac-norvir/tolerability/dejar_alc.html";
+"~^/doc/rotten.com/library/history/political-scandal/lewinsky-affair/Starr_Report/2toc.htm.*$" "/doc/rotten.com/library/history/political-scandal/lewinsky-affair/Starr_Report/2toc.html";
+"~^/doc/rotten.com/library/history/political-scandal/lewinsky-affair/Starr_Report/3chron.htm.*$" "/doc/rotten.com/library/history/political-scandal/lewinsky-affair/Starr_Report/3chron.html";
+"~^/doc/rotten.com/library/history/political-scandal/lewinsky-affair/Starr_Report/4names2.htm.*$" "/doc/rotten.com/library/history/political-scandal/lewinsky-affair/Starr_Report/4names2.html";
+"~^/doc/rotten.com/library/history/political-scandal/lewinsky-affair/Starr_Report/5intro.htm.*$" "/doc/rotten.com/library/history/political-scandal/lewinsky-affair/Starr_Report/5intro.html";
+"~^/doc/rotten.com/library/history/political-scandal/lewinsky-affair/Starr_Report/6narrit.htm.*$" "/doc/rotten.com/library/history/political-scandal/lewinsky-affair/Starr_Report/6narrit.html";
+"~^/doc/rotten.com/library/history/political-scandal/lewinsky-affair/Starr_Report/7grounds.htm.*$" "/doc/rotten.com/library/history/political-scandal/lewinsky-affair/Starr_Report/7grounds.html";
+"~^/doc/rotten.com/library/history/political-scandal/lewinsky-affair/Starr_Report/8endpage.htm.*$" "/doc/rotten.com/library/history/political-scandal/lewinsky-affair/Starr_Report/8endpage.html";
