--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -830,6 +830,9 @@ server {
         rewrite ^/(?<hs>static/build/.*)\.hi$ /$hs.hs permanent;
         rewrite ^/(?<hs>static/build/.*)\.o$  /$hs.hs permanent;
         rewrite ^/(?<first>.*)%E2%80%93(?<second>.*)$ /$first-$second permanent;
+        rewrite ^/.*ttps\:\/\/gwern\.net/(?<original>.*) /$original permanent;
+        rewrite ^/doc/cryonic/(?<original>.*)$ /doc/cryonics/$original permanent;
+        rewrite ^/(?<original>.*)\)$ /$original permanent;
 
         # work around *Cloudflare* bugs! For some reason, their servers determinedly drop a slash, every time. ???
         # rewrite ^/metadata/annotations/https\:\/(?<original>[0-9a-zA-Z].*) /metadata/annotation/https%3A%2F%2F$original permanent;
