--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -9406,3 +9406,7 @@ default "";
 "~^/doc/rotten.com/library/history/political-scandal/lewinsky-affair/Starr_Report/6narrit.htm.*$" "/doc/rotten.com/library/history/political-scandal/lewinsky-affair/Starr_Report/6narrit.html";
 "~^/doc/rotten.com/library/history/political-scandal/lewinsky-affair/Starr_Report/7grounds.htm.*$" "/doc/rotten.com/library/history/political-scandal/lewinsky-affair/Starr_Report/7grounds.html";
 "~^/doc/rotten.com/library/history/political-scandal/lewinsky-affair/Starr_Report/8endpage.htm.*$" "/doc/rotten.com/library/history/political-scandal/lewinsky-affair/Starr_Report/8endpage.html";
+"~^/doc/ai/2017-jouppi.pdf.*$" "/doc/ai/scaling/hardware/2017-jouppi.pdf";
+"~^/doc/psychology/animal/bird/2000-tramontin.pdf.*$" "/doc/psychology/animal/bird/neuroscience/2000-tramontin.pdf";
+"~^/doc/psychology/animal/bird/2016-gunturkun.pdf.*$" "/doc/psychology/animal/bird/neuroscience/2016-gunturkun.pdf";
+"~^/order-statistics.*$" "/order-statistic";
