--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -12496,8 +12496,8 @@
 "~^/popular$" "/index#popular";
 "~^/res$" "/resorter";
 "~^/GPT-31$" "/gpt-3";
-"~/[Bb]igg$" "/biggan";
-"~/[Bb]igga$" "/biggan";
+"~^/[Bb]igg$" "/biggan";
+"~^/[Bb]igga$" "/biggan";
 "~^/doc/statistics/bias/1992-miller-reresearchfraudbehavioralmedicalsciences.pdf.*$" "/doc/statistics/bias/1992-miller-researchfraudbehavioralmedicalsciences.pdf";
 "~^/doc/lesswrong-survey/%C3%82.*$" "/doc/lesswrong-survey/index";
 "~^/doc/fiction/science-fiction/frank-herbert/1980-omni-june.pdf.*$" "/doc/fiction/science-fiction/frank-herbert/1980-omni-july.pdf";
@@ -12660,6 +12660,9 @@
 "~^/Research$" "/research-criticism";
 "~^/penpen.page.*$" "/fiction/penpen.page";
 "~^/.*/CYOA$" "/cyoa";
+"~^/[Hh]amming.*$" "/doc/science/1986-hamming";
+"~^/[Yy]ou-and-your-research.*$" "/doc/science/1986-hamming";
+"~^/doc/science/1986-hamming-you.*$" "/doc/science/1986-hamming";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.*/\.git/.*$" "/static/404";
