--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -12663,6 +12663,28 @@
 "~^/[Hh]amming.*$" "/doc/science/1986-hamming";
 "~^/[Yy]ou-and-your-research.*$" "/doc/science/1986-hamming";
 "~^/doc/science/1986-hamming-you.*$" "/doc/science/1986-hamming";
+"~^/doc/science/1986-haming.*$" "/doc/science/1986-hamming";
+"~^/doc/science/198[0-57-9]-hamming$" "/doc/science/1986-hamming";
+"~^/doc/iq/high/smpy/2004-frey.pdfprov.*$" "/doc/iq/high/smpy/2004-frey.pdf";
+"~^/doc/psychology/1991-downs.the-majority.*$" "/doc/psychology/1991-downs.pdf";
+"~^/doc/science/1986-maze$" "/doc/science/1986-hamming";
+"~^/misc$" "/note/note";
+"~^/Newsletters.*$" "/doc/newsletter/index";
+"~^/The-Future-of-Parenting-AI.*$" "/static/404";
+"~^/doc/genetics/2012-vandongen.pdf.*$" "/doc/genetics/heritable/2012-vandongen.pdf";
+"~^/doc/2012-zulkiply.pdf.*$" "/doc/psychology/spaced-repetition/2012-zulkiply.pdf";
+"~^/doc/anime/eva/lit.*$" "/doc/anime/eva/little-boy/index";
+"~^/eprint.iacr.org$" "https://eprint.iacr.org/";
+"~^/static/font/drop-cap/kanzlei/Kanzlei-Initialen$" "/static/font/drop-cap/kanzlei/index";
+"~^/stakeballhuay.com.*$" "/static/404";
+"~^/podcasters.spotify.com/pod/show/therambler.*$" "/static/404";
+"~^/On-Disrespectsocial-respect.*$" "/on-disrespect#social-respect";
+"~^/GPT-3-prompt-engineering.*$" "/gpt-3#prompt-engineering";
+"~^/doc/.*/Silk-Road.*$" "/silk-road";
+"~^/doc/.*/Melon.*$" "/melon";
+"~^/doc/ig/2002-templer.pdf.*$" "/doc/iq/2002-templer.pdf";
+"~^/doc/genetics/1977-todd.pdf.*$" "/doc/genetics/selection/natural/1977-todd.pdf";
+"~^/doc/spacesrepetition/1994-hall.pdf.*$" "/doc/spaced-repetition/1994-hall.pdf";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.*/\.git/.*$" "/static/404";
@@ -18199,6 +18221,12 @@
 "~^/semspb.tmweb.*$" "/static/404";
 "~^/[Mm]oneypedia.dk.*$" "/static/404";
 "~^/issuu.com.*$" "/static/404";
+"~^/piaoshen.*$" "/static/404";
+"~^/geoserver.*$" "/static/404";
+"~^/daily-shop.*$" "/static/404";
+"~^/bit.ly/.*$" "/static/404";
+"~^/betflix.*$" "/static/404";
+"~^/.*ueditor1.*$" "/static/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
