--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -9410,3 +9410,4 @@ default "";
 "~^/doc/psychology/animal/bird/2000-tramontin.pdf.*$" "/doc/psychology/animal/bird/neuroscience/2000-tramontin.pdf";
 "~^/doc/psychology/animal/bird/2016-gunturkun.pdf.*$" "/doc/psychology/animal/bird/neuroscience/2016-gunturkun.pdf";
 "~^/order-statistics.*$" "/order-statistic";
+"~^/doc/science/2009-kaiser.pdf.*$" "/doc/science/2009-kaiser-2.pdf";
