--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -12864,7 +12864,7 @@
 "~^/doc/economics/1688-delavega-confusion$" "/doc/economics/1688-delavega-confusionofconfusions.pdf";
 "~^/doc/correlation/index$" "/doc/genetics/heritable/correlation/index";
 "~^/doc/cat/catnip/survey/%C3%82%C2%BF.*$" "/doc/cat/catnip/survey/index";
-"~^/doc/ai/2020-mccorduck\.pdf.*$" "/static/404";
+"~^/doc/ai/2020-mccorduck\.pdf.*$" "/doc/ai/2019-mccorduck-thiscouldbeimportant.epub";
 "~^/doc/2011-sato-mito\.pdf.*$" "/doc/zeo/2011-satomito.pdf";
 "~^/darknet-markets/silk-road/2/index$" "/doc/darknet-market/silk-road/2/index";
 "~^/dall-e%C3%A3$" "/dall-e";
@@ -12977,10 +12977,21 @@
 "~^/doc/sociology/2015-gupta$" "/doc/sociology/2015-gupta.pdf";
 "~^/doc/science/2012-bo$" "/doc/science/2012-borghi.pdf";
 "~^/doc/rotten.com/library/artificial-languages/$" "/doc/rotten.com/library/language/artificial-languages/index.html";
-"~^/doc/p.*The-Snowbanks-of-Time$" "/fiction/snowbank";
+"~^/doc/.*Snowbanks-of-Time$" "/fiction/snowbank";
 "~^/doc/psychology/spaced-repetition/2006-roediger.pdfS.*$" "/doc/psychology/spaced-repetition/2006-roediger.pdf";
 "~^/DNB-FAQDu.*$" "/dnb-faq";
 "~^/gp3.*$" "/gpt-3";
+"~^/docs/psychology/personality/2020gabay.*" "/docs/psychology/personality/2020-gabay.pdf";
+"~^/bitcoin$" "/bitcoin-is-worse-is-better";
+"~^/doc/ai/2019-nelson.pdf.*$" "/static/404";
+"~^/doc/genetics/...sersdottir\.pdf.*$" "/doc/genetics/heritable/2018-ebenesersdottir.pdf";
+"~^/doc/ai/2021-zhang-figure5-ernievilstyleexamples.png$" "/doc/ai/nn/transformer/gpt/dall-e/2021-zhang-figure5-ernievilstyleexamples.png";
+"~^/doc/ai/2021-tay-figure1-t5pretrainingvsfinetuningtransferscaling.png$" "/doc/ai/nn/transformer/t5/2021-tay-figure1-t5pretrainingvsfinetuningtransferscaling.png";
+"~^/doc/2015-niemesh\.pdf.*$" "/doc/economics/2015-niemesh.pdf";
+"~^/doc/dnb/2014-perham\.pdf.*$" "/doc/music/music-distraction/2014-perham.pdf";
+"~^/doc/.../1986-modgil-hanseysenckconsensusandcontroversy\.pdf.*$" "/doc/psychology/1986-modgil-hanseysenckconsensusandcontroversy.pdf";
+"~^/doc/1985-brissette\.pdf.*$" "/doc/zeo/1985-brissette.pdf";
+"~^/static/logo/$" "/static/img/logo/index";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.*/\.git/.*$" "/static/404";
@@ -18527,6 +18538,9 @@
 "~^/morgenmitdir.*$" "/static/404";
 "~^/zephr.*$" "/static/404";
 "~^/curebooking.*$" "/static/404";
+"~^/doc/www/git-scm.com/No%20favicon.*$" "/static/404";
+"~^/WuEL.*$" "/static/404";
+"~^/maxwell6f07.*$" "/static/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
