--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -807,6 +807,7 @@ server {
         rewrite ^/(?<old>.*)\.page/$ /$old.page permanent;
         rewrite ^/(?<old>.*)/N/A$ /$old permanent;
         rewrite ^/(?<first>.*)‐(?<second>.*)$ /$first-$second permanent; # convert HYPHEN (which is bad!) to what everyone thinks HYPHEN is, HYPHEN-MINUS
+        rewrite ^/(?<first>.*)\+(?<second>.*)$ /$first-$second permanent;
         rewrite ^/tatic/(?<old>.*)$ /static/$old permanent;
         rewrite ^/doc/anime/eva/anime/eva/(?<old>.*)$ /doc/anime/eva/$old permanent;
         rewrite ^/(?<old>.*)/index/wp$ /$old/index permanent;
@@ -832,7 +833,11 @@ server {
         rewrite ^/(?<first>.*)%E2%80%93(?<second>.*)$ /$first-$second permanent;
         rewrite ^/.*ttps\:\/\/gwern\.net/(?<original>.*) /$original permanent;
         rewrite ^/doc/cryonic/(?<original>.*)$ /doc/cryonics/$original permanent;
+        rewrite ^/(?<original>doc/.*)/3[Dd]$ /$original/index permanent;
         rewrite ^/(?<original>.*)\)$ /$original permanent;
+        rewrite ^/(?<original>.*)\[.*$ /$original permanent;
+        rewrite ^/(?<original>.*)\].*$ /$original permanent;
+        rewrite ^/\./(?<original>.*)$ /$original permanent;
 
         # work around *Cloudflare* bugs! For some reason, their servers determinedly drop a slash, every time. ???
         # rewrite ^/metadata/annotations/https\:\/(?<original>[0-9a-zA-Z].*) /metadata/annotation/https%3A%2F%2F$original permanent;
