--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -13234,6 +13234,88 @@
 "~^/DeepDream.*$" "https://en.wikipedia.org/wiki/DeepDream";
 "~^/LSD-[Mm]icrodosing\?.*$" "/lsd-microdosing";
 "~^/doc/gpt/index.*$" "/doc/ai/nn/transformer/gpt/index";
+"~^/doc/2013-gahche.pdf.*$" "/doc/iodine/2013-gahche.pdf";
+"~^/doc/psychology/2018-williams-2$" "/doc/psychology/2018-williams-2.pdf";
+"~^/azos18.*$" "/static/404";
+"~^/soalkon.*$" "/static/404";
+"~^/doc/science/1986-hemming.*$" "/doc/science/1986-hamming";
+"~^/doc/psychology/2014-mueller\.pdf.*$" "/static/404";
+"~^/doc/touhou/2013-c84-downloads.txt$" "/doc/touhou/2013-c84-downloads.json";
+"~^/doc/darknet-market/william-pickard/2003-pickard-lsd-trial-transcript-gordontoddskinner-10-3\.pdf.*$" "/doc/darknet-market/william-pickard/index";
+"~^/doc/darknet-market/william-pickard/2003-pickard-lsd-trial-transcript-gordontoddskinner-12\.pdf.*$" "/doc/darknet-market/william-pickard/2003-pickard-lsd-trial-transcript-gordontoddskinner-10-2.pdf";
+"~^/doc/psychology/1941-leckley-Maskofsanity\.pdf.*$" "/doc/psychiatry/1941-cleckley-maskofsanity.pdf";
+"~^/doc/psychology/2018-williams-2$" "/doc/psychology/2018-williams-2.pdf";
+"~^/page$" "/index";
+"~^/doc/touhou/c84-downloads.txt$" "/doc/touhou/2013-c84-downloads.json";
+"~^/lab/rotten.com/library$" "/doc/rotten.com/library";
+"~^/doc/touhou/2014-c84-downloads.txt$" "/doc/touhou/2013-c84-downloads.json";
+"~^/doc/.*/Wikipedia-and-Knol.*$" "/wikipedia-and-knol";
+"~^/doc/.*/Wikipedia-and-YouTube.*$" "/wikipedia-and-youtube";
+"~^/doc/newest/rss.*$" "/doc/newest/index";
+"~^/Culture-is-not-about-Esthetics\?.*$" "/culture-is-not-about-esthetics";
+"~^/dnm-meta-analysis\?.*$" "/dnm-meta-analysis";
+"~^/DNB-FAQ\?.*$" "/dnb-faq";
+"~^/Terrorism-is-not-about-Terror\?.*$" "/terrorism-is-not-about-terror";
+"~^/review/Movies\?.*$" "/review/movies";
+
+"~^/Run-Length-Encoding$" "/haskell/run-length-encoding";
+"~^/doc/psychology/2020-10-vmv.*$" "/doc/psychology/2020-10-26-dyqz-rdataisbeautiful-iasked16kpeoplehowmanyholescertainobjectshave.html";
+"~^/static/js/ajax.js$" "/static/js/index";
+"~^/note/abandon$" "/note/abandoned-footnotes";
+"~^/GPT-3.G%C3%BCtt.*r$" "/gpt-3";
+"~^/fiction/The-Erl-King.html$" "/fiction/the-erl-king";
+"~^/doc/statistics/bias/gwern-1975-rosenthal-experimenterexpectancyeffects\.pdf.*$" "/doc/statistics/bias/1976-rosenthal-experimenterexpectancyeffects.pdf";
+"~^/doc/.*/Catnip-survey$" "/catnip-survey";
+"~^/DOCS/LONGEVITY/2019-FAHY\.pdf.*$" "/doc/longevity/epigenetics/2019-fahy.pdf";
+"~^/doc/psychology/personality/conscientiousness/1991-Human-.*barrick\.pdf.*$" "/doc/psychology/personality/conscientiousness/1991-barrick.pdf";
+"~^/doc/psychology/okcupid/yourlooksand$" "/doc/psychology/okcupid/yourlooksandyourinbox.html";
+"~^/doc/music/music-distraction/2002-furham\.pdf.*$" "/doc/music/music-distraction/2002-furnham.pdf";
+"~^/doc/longevity/2019-harman\.pdf.*$" "/doc/longevity/index";
+"~^/doc/iq/smpy;2014-lubinski\.pdf.*$" "/doc/iq/high/smpy/2014-lubinski.pdf";
+"~^/doc/iq/1998-deneve.pdf245Ana.*$" "/doc/iq/1998-deneve.pdf";
+"~^/doc/economics/2020-pennington.pdf..*$" "/doc/economics/2020-pennington.pdf";
+"~^/doc/darknet-market/2013-FJ.*$" "/doc/darknet-market/index";
+"~^/doc/ai/poetry/2019-12-16-gpt21.1$" "/doc/ai/poetry/2019-12-16-gpt21.5b-poetry-samples-topp080.txt";
+"~^/doc/ai/1966-ivakhnenko.pdf..*$" "/doc/ai/1966-ivakhnenko.pdf";
+"~^/Cropssharpdanbooru2019-portraits$" "/crops#danbooru2019-portraits";
+"~^/culture-is-not-about-Esthetics$" "/culture-is-not-about-esthetics";
+"~^/DNB-FAQ\!.*$" "/dnb-faq";
+"~^/doc/2012-heinrich\.pdf.*$" "/doc/2012-heinrich.pdf";
+"~^/doc/ai/2021-radford-clip-figure13-cliprobustness.png$" "/doc/ai/nn/transformer/clip/2021-radford-clip-figure13-cliprobustness.png";
+"~^/doc/ai/2023-01-01-ross-openclipscalingforclipvitbigg14laion2b39bb160k.png$" "/doc/ai/nn/transformer/clip/2023-01-01-ross-openclipscalingforclipvitbigg14laion2b39bb160k.png";
+"~^/doc/ai/2021-hernandez-transferlearning-figure2-transferscaling.png$" "/doc/ai/nn/transformer/gpt/2021-hernandez-transferlearning-figure2-transferscaling.png";
+"~^/doc/ai/2009-12-07-shanelegg-supercomputerlinpackoverpast50years.png$" "/doc/ai/scaling/2009-12-07-shanelegg-supercomputerlinpackoverpast50years.png";
+"~^/doc/ai/2020-08-05-hippke-measuringhardwareoverhang-chessscaling19902020.png$" "/doc/ai/scaling/hardware/2020-08-05-hippke-measuringhardwareoverhang-chessscaling19902020.png";
+"~^/doc/2003-jaeggi\.pdf.*$" "/doc/dual-n-back/2003-jaeggi.pdf";
+"~^/doc/2010-colom\.pdf.*$" "/doc/dual-n-back/2010-colom.pdf";
+"~^/doc/1972-pretell\.pdf.*$" "/doc/iodine/1972-pretell.pdf";
+"~^/doc/iq/1956-cter\.pdf.*$" "/doc/iq/ses/1956-canter.pdf";
+"~^/doc/melaton-in/2012-wood\.pdf.*$" "/doc/melatonin/2012-wood.pdf";
+"~^/doc/.*/Melatonin$" "/melatonin";
+"~^/doc/1988-bastuji\.pdf.*$" "/doc/modafinil/1988-bastuji.pdf";
+"~^/doc/2012-kelley\.pdf.*$" "/doc/modafinil/2012-kelley.pdf";
+"~^/doc/1994-lehouezec\.pdf.*$" "/doc/nicotine/1994-lehouezec.pdf";
+"~^/doc/2004-lesk\.pdf.*$" "/doc/nootropic/caffeine/2004-lesk.pdf";
+"~^/doc/predictions/2001-armstrong-principlesforcasting\.pdf.*$" "/doc/prediction/2001-armstrong-principlesforecasting.pdf";
+"~^/doc/ai/2022-ramrakhya-figure7-scalingcurvesofimitationlearningonpickandplace.png$" "/doc/reinforcement-learning/exploration/2022-ramrakhya-figure7-scalingcurvesofimitationlearningonpickandplace.png";
+"~^/doc/2016-silver\.pdf.*$" "/doc/reinforcement-learning/model/alphago/2016-silver.pdf";
+"~^/doc/ai/2022-reed-figure2-trainingarchitectureofgatodecisiontransformer.png$" "/doc/reinforcement-learning/model/decision-transformer/2022-reed-figure2-trainingarchitectureofgatodecisiontransformer.png";
+"~^/doc/2002-pearson\.pdf.*$" "/doc/sociology/2002-pearson.pdf";
+"~^/doc/statistics/2017-fanelli\.pdf.*$" "/doc/statistics/bias/2017-fanelli.pdf";
+"~^/doc/-statistics/decision/1957-bellman-dynamicprogramming\.pdf.*$" "/doc/statistics/decision/1957-bellman-dynamicprogramming.pdf";
+"~^/doc/dnb/2013-couzinfrancel\.pdf.*$" "/doc/statistics/meta-analysis/2013-couzinfrankel.pdf";
+"~^/doc/2010-anderson\.pdf.*$" "/doc/statistics/prediction/2010-anderson.pdf";
+"~^/GT-3$" "/gpt-3";
+"~^/On$" "/on-disrespect";
+"~^/index.htm$" "/index";
+"~^/meletonin$" "/melatonin";
+"~^/review/Arpa$" "/reviews/arpa";
+"~^/\./SMPY$" "/smpy";
+"~^/static/image-focus$" "/static/js/image-focus.js";
+"~^/doc/biology/favicon.ico$" "/static/img/favicon.ico";
+"~^/Timing/$" "/timing";
+"~^/Unseeng$" "/unseeing";
+"~^/Unsee$" "/unseeing";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.*/\.git/.*$" "/static/404";
